--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<h1>Class Space</h1> <!-- Title above the grid -->
+
 <div class="grid-container">
     <div class="grid-item">1</div>
     <div class="grid-item">2</div>
