--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <h1>Class Space</h1> <!-- Title above the grid -->
 
 <div class="grid-container">
-    <div class="grid-item" style="background-image: url('image1.jpg');">1</div>
-    <div class="grid-item" style="background-image: url('image2.jpg');">2</div>
-    <div class="grid-item" style="background-image: url('image3.jpg');">3</div>
-    <div class="grid-item" style="background-image: url('image4.jpg');">4</div>
-    <div class="grid-item" style="background-image: url('image5.jpg');">5</div>
-    <div class="grid-item" style="background-image: url('image6.jpg');">6</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">1</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">2</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">3</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">4</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">5</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPGg');">6</div>
 </div>
 
 </body>
