--- a/ar.html
+++ b/ar.html
@@ -7,12 +7,12 @@
     <title>3D Model + Hotspot</title>
     <title>3D Model + Hotspots</title>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <model-viewer src="nile.glb" ar ar-modes="webxr quick-look" camera-controls tone-mapping="commerce"
+        <model-viewer src="chinese_dragon.glb" ar ar-modes="webxr quick-look" camera-controls tone-mapping="commerce"
             poster="poster.webp" shadow-intensity="1" camera-orbit="-357.5deg 68.39deg 7.195m" field-of-view="15.78deg"
             min-camera-orbit="auto 36deg auto" max-camera-orbit="auto 101deg auto" auto-rotate>
             <button class="Hotspot" slot="hotspot-1"
