--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="grid-container">
     <div class="grid-item" style="background-image: url('media/IMG_8721.JPG');"><a href="ar">PROJECT NAME 1</a></div>
-    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">2</div>
+    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');"><a href="ai">AI</a></div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">3</div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">4</div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">5</div>
