--- a/ai.html
+++ b/ai.html
@@ -7,7 +7,7 @@
     <title>3D Model + Hotspot</title>
     <title>3D Model + Hotspots</title>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
