--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Class Space</h1> <!-- Title above the grid -->
 
 <div class="grid-container">
-    <div class="grid-item" style="background-image: url('media/IMG_8721.JPG');"><a href="ar">PROJECT NAME 1</a></div>
+    <div class="grid-item" style="background-image: url('media/IMG_8721.JPG');"><a href="ar">AR</a></div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');"><a href="ai">AI</a></div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">3</div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">4</div>
