--- a/ar.html
+++ b/ar.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <model-viewer src="chinese_dragon.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" auto-rotate>
+        <model-viewer src="facecube.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" auto-rotate>
             <button class="Hotspot" slot="hotspot-1" data-position="-13.510206151872035m 13.70561019665674m -2.50155720872932m" data-normal="0.29867940294749523m 0.8589314479517088m 0.41596560191259646m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">head</div>
             </button>
