--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="grid-container">
     <div class="grid-item" style="background-image: url('media/IMG_8721.JPG');"><a href="ar">AR</a></div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');"><a href="ai">AI</a></div>
-    <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">3</div>
+    <div class="grid-item" style="background-image: url('metahuman.png');"><a href="Metahuman">Metahuman</a>n</div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">4</div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPG');">5</div>
     <div class="grid-item" style="background-image: url('qian0418/CT2.github.io/media/IMG_8721.JPGg');">6</div>
