--- a/Metahuman.html
+++ b/Metahuman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metahuman/title>
+    <title>Metahuman:Qian/title>
 </head>
 <body>
     <img src="metahuman.png" alt="metahuman">
